@@ -953,6 +953,9 @@ Release 2.8.0 - UNRELEASED
     HADOOP-11684. S3a to use thread pool that blocks clients. (Thomas Demoor
     and Aaron Fabbri via lei)
 
+    HADOOP-12562. Make hadoop dockerfile usable by Yetus.
+    (Allen Wittenauer via wheat9)
+
   OPTIMIZATIONS
 
     HADOOP-11785. Reduce the number of listStatus operation in distcp
